# rnabam2cov

./: .gitignore  LICENSE  README.md  pyproject.toml  rnabam2cov.yaml  rnabam2cov_dev.yaml
.github/workflows/: python-package-conda.yml
src/rnabam2cov/: cli.py  coverage.py  strandedness.py
tests/: test_cli.py  test_coverage.py  test_strandedness.py
tests/data/: example.forward.bam  example.forward.bam.bai  example.reverse.bam  example.reverse.bam.bai  example.reverse.full.bam  example.reverse.full.bam.bai  exons.example.forward.bed  exons.example.reverse.bed  expected.forward.minus.bedgraph  expected.forward.minus.bga.bedgraph  expected.forward.plus.bedgraph  expected.forward.plus.bga.bedgraph  expected.reverse.minus.bedgraph  expected.reverse.minus.bga.bedgraph  expected.reverse.plus.bedgraph  expected.reverse.plus.bga.bedgraph  generate_bedgraphs_bedtools.sh
