[project]
name = "rnabam2cov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pybedtools>=0.12",
]

[project.scripts]
rnabam2cov = "rnabam2cov.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
